# cos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  partitions.csv  sdkconfig.defaults
.cursor/rules/: cos-conventions.mdc
.devcontainer/: devcontainer.json
.github/workflows/: build-and-lint.yml  ci.yml  docs-check.yml  format-check.yml  integration-test.yml  test.yml
components/bluetooth/: CMakeLists.txt
components/bluetooth/include/: bluetooth.h
components/bluetooth/src/: bluetooth.c  bluetooth_cmd.c  bluetooth_eir.c  bluetooth_eir.h  bluetooth_hid.c  bluetooth_hid.h
components/brightness/: CMakeLists.txt
components/brightness/include/: brightness.h
components/brightness/src/: brightness.c  brightness_cmd.c
components/calibration/: CMakeLists.txt
components/calibration/include/: calibration.h
components/calibration/src/: calibration.c  calibration_cmd.c  calibration_storage.c  calibration_storage.h
components/display/: CMakeLists.txt  idf_component.yml
components/display/include/: display.h
components/display/src/: cyd_board_config.h  display.cpp
components/filesystem/: CMakeLists.txt  idf_component.yml
components/filesystem/include/: filesystem.h
components/filesystem/src/: cyd_sdcard_pins.h  flash.c  flash.h  sdcard.c  sdcard.h  vfs.c  vfs_path.c
components/http_server/: CMakeLists.txt
components/http_server/include/: http_server.h
components/http_server/src/: http_api.c  http_auth.c  http_auth.h  http_mime.c  http_mime.h  http_multipart.c  http_multipart.h  http_path.c  http_server.c  http_server_cmd.c  http_static.c  http_upload.c
components/i2c_bus/: CMakeLists.txt
components/i2c_bus/include/: i2c_bus.h
components/i2c_bus/src/: cyd_i2c_pins.h  i2c_bus.c  i2c_bus_cmd.c
components/light_sensor/: CMakeLists.txt
components/light_sensor/include/: light_sensor.h
components/light_sensor/src/: cyd_light_sensor_pins.h  light_sensor.c  light_sensor_cmd.c
components/ota/: CMakeLists.txt
components/ota/include/: ota.h
components/ota/src/: ota.c
components/rgb_led/: CMakeLists.txt
components/rgb_led/include/: rgb_led.h
components/rgb_led/src/: cyd_rgb_led_pins.h  rgb_led.c  rgb_led_cmd.c
components/shell/: CMakeLists.txt
components/shell/include/: shell.h
components/shell/src/: shell.c  shell_cmds.h  shell_fs_cmds.c  shell_info_cmds.c  shell_input.c  shell_input.h  shell_sd_cmds.c
components/system/: CMakeLists.txt
components/system/include/: system.h
components/system/src/: system.c  system_cmd.c
components/text_console/: CMakeLists.txt
components/text_console/include/: text_console.h
components/text_console/src/: text_buffer.c  text_buffer.h  text_console.cpp  text_console_cmd.c
components/time_sync/: CMakeLists.txt
components/time_sync/include/: time_sync.h
components/time_sync/src/: time_sync.c  time_sync_cmd.c
components/websocket/: CMakeLists.txt
components/websocket/include/: websocket.h
components/websocket/src/: websocket.c
components/wifi/: CMakeLists.txt
components/wifi/include/: wifi.h
components/wifi/src/: wifi.c  wifi_cmd.c  wifi_default_config.h
integration_test/: conftest.py  pytest.ini
integration_test/test_init_sequence/: CMakeLists.txt  test_init_sequence.py
integration_test/test_init_sequence/main/: CMakeLists.txt  test_init.c
integration_test/test_nvs_calibration/: CMakeLists.txt  partitions.csv  test_nvs_calibration.py
integration_test/test_nvs_calibration/main/: CMakeLists.txt  test_nvs_cal.c
integration_test/test_shell_fs/: CMakeLists.txt  test_shell_fs.py
integration_test/test_shell_fs/main/: CMakeLists.txt  test_shell_fs.c
integration_test/test_stability/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  test_stability.py
integration_test/test_stability/main/: CMakeLists.txt  test_stability.c
integration_test/test_system/: CMakeLists.txt  test_system.py
integration_test/test_system/main/: CMakeLists.txt  test_system.c
integration_test/test_vfs_ops/: CMakeLists.txt  sdkconfig.defaults  test_vfs_ops.py
integration_test/test_vfs_ops/main/: CMakeLists.txt  test_vfs_ops.c
main/: CMakeLists.txt  main.c
scripts/: run_tidy.py
test/: CMakeLists.txt  test_bluetooth_cmd.c  test_bluetooth_eir.c  test_bluetooth_hid.c  test_brightness.c  test_calibration.c  test_calibration_storage.c  test_http_auth.c  test_http_mime.c  test_http_upload.c  test_i2c_bus.c  test_rgb_led.c  test_shell.c  test_shell_input.c  test_system.c  test_text_buffer.c  test_time_sync.c  test_vfs_path.c  test_wifi.c
test/mocks/: console_private.h  esp_bt_defs.h  esp_check.h  esp_console.h  esp_err.h  esp_event.h  esp_flash.h  esp_heap_caps.h  esp_http_server.h  esp_log.h  esp_mac.h  esp_netif.h  esp_sntp.h  esp_system.h  esp_timer.h  esp_wifi.h  esp_wifi_types.h  mock_bluetooth.c  mock_bluetooth.h  mock_console.c  mock_console.h  mock_display.c  mock_display.h  mock_esp_event.c  mock_esp_event.h  mock_esp_netif.c  mock_esp_netif.h  mock_esp_timer.c  mock_esp_timer.h  mock_esp_wifi.c  mock_esp_wifi.h  mock_filesystem.c  mock_filesystem.h  mock_freertos.c  mock_freertos.h  mock_freertos_extra.c  mock_httpd.c  mock_httpd.h  mock_i2c.c  mock_i2c.h  (+18 more)
test/mocks/driver/: i2c_master.h  ledc.h  uart.h  uart_vfs.h
test/mocks/freertos/: FreeRTOS.h  event_groups.h  semphr.h  stream_buffer.h  task.h
test/mocks/mbedtls/: base64.h
